# spell_checker

./: Cargo.toml  README.md
src/: lib.rs
src/data/: wap.txt
