[package]
description = "A spell checking library you can provide a dictionary and a file to check to, it can print out a list of misspelled words"
name = "spell_checker"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Bazyl Horsey<bhorsey16@gmail.com>"]


[lib]
name = "spell_checker"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
